tests/NormalTests/paczka2/big_fuzzy/43254777.err
Error in line 6: A46 A420 77,2
Error in line 12: GeABO0 S306 79,2
Error in line 21: GeABO0 A420 -1,1
Error in line 25: fkvKN3ePq1 A46 317,7
Error in line 22: sjlt07 S306 92,9
Error in line 23: JW2xCxoLhm A420 25,5
Error in line 17: GeABO0 A420 45,8
Error in line 61: 4At6jY S306 128,9
Error in line 64: fkvKN3ePq1 A46 15,2
Error in line 74: 4At6jY A46 89,7
Error in line 77: 4At6jY A420 84,5
Error in line 83: GeABO0 A46 40,3
Error in line 107: fkvKN3ePq1 A420 39,49
Error in line 109: sjlt07 A420 84,0
Error in line 100: fkvKN3ePq1 S306 68,1
Error in line 87: GeABO0 A420 78,6
Error in line 118: A4> A420 81,2
Error in line 108: 4At6jY S860 157,0
Error in line 119: sjlt07 S306 13,4
Error in line 123: sjlt07 S860 54,7
Error in line 124: sjlt07 S306 62,9
Error in line 113: fkvKN3ePq1 A420 141,2
Error in line 126: sjlt07 S860 11,9
Error in line 144: 4At6jY A46 66,6
Error in line 145: 4At6jY A420 6,9
Error in line 152: GeABO0 S860 91,0
Error in line 154: sjlt07 A46 97,6
Error in line 155: GeABO0 A46 90,4
Error in line 169: A46 A420 62,5
Error in line 175: fkvKN3ePq1 A420 42,71
Error in line 172: sjlt07 S860 96,4
Error in line 192: 4At6jY S860 70,5
Error in line 197: 4At6jY S306 17,4
Error in line 206: sjlt07 S860 42,3
Error in line 205: A46 A420 78,9
Error in line 218: sjlt07 A46 16,3
Error in line 227: 4At6jY S306 97,6
Error in line 228: GeABO0 A420 95,8
Error in line 240: fkvKN3ePq1 S306 23,5
Error in line 241: GeABO0 S860 13,5
